# issue_insight

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Fission-AI_OpenSpec_20251023_092732.json  README.md  TESTING.md  bmad-code-org_BMAD-METHOD_20251022_173441.json  debug_github.py  github_spec-kit_20251022_152512.json  issues.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests_with_timeout.py  setup.py
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: TESTING_QUICKSTART.md
openspec/: project.md
openspec/changes/improve-readability/: proposal.md  tasks.md
research/: python_cli_github_best_practices.md
specs/001-github-issue/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-issue/checklists/: requirements.md
specs/001-github-issue/contracts/: cli-interface.yaml  github-api.yaml
specs/002-most-comment-users/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-most-comment-users/checklists/: requirements.md
specs/003-output/: spec.md
specs/003-output/checklists/: requirements.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/issue_finder/: __init__.py  cli.py
src/issue_finder/models/: __init__.py  issue.py  metrics.py  repository.py  user.py
src/issue_finder/services/: __init__.py  filter_engine.py  github_client.py  metrics_calculator.py  output_formatter.py
src/issue_finder/utils/: __init__.py  auth.py  errors.py  progress.py  validation.py
src/lib/: __init__.py  formatters.py
src/models/: __init__.py
src/services/: filter_engine.py  github_client.py  issue_analyzer.py  metrics_analyzer.py
src/utils/: __init__.py  errors.py  filename_generator.py  formatters.py  progress.py  validators.py
tests/: __init__.py  conftest.py  test_cleanup_guide.md
tests/contract/: test_api_contracts.py  test_cli_interface.py  test_comment_aggregation.py
tests/integration/: test_cli_integration.py  test_us1_basic_filtering.py  test_us1_most_comment_users.py  test_us3_metrics.py  test_us4_comments.py
tests/unit/: test_cleanup_functionality.py  test_cli_advanced_args.py  test_comment_aggregation.py  test_comment_formatting.py  test_comment_retrieval.py  test_date_parsing.py  test_errors.py  test_filename_generator.py  test_filter_engine.py  test_filter_engine_advanced.py  test_filter_engine_comments.py  test_formatter_table.py  test_github_client.py  test_github_client_issues.py  test_limit_validation.py  test_metrics_formatting.py  test_models.py  test_progress.py  test_services.py  test_time_breakdowns.py  test_validators.py
